delivering audio from VLC
need to clarify delivered audio format, samples buffer format and audio
samples format supported by Touch.
follow-up links:
- VLC audio format:
https://forum.videolan.org/viewtopic.php?f=32&t=131240
- Touch audio format:
https://www.derivative.ca/Forum/viewtopic.php?f=27&t=8717

--- a/msvs/YouTubeTOP.vcxproj.filters
+++ b/msvs/YouTubeTOP.vcxproj.filters
@@ -24,12 +24,33 @@
     <ClInclude Include="TOP_CPlusPlusBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CHOP_CPlusPlusBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="youtube_chop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shared_data.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="touch_helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stream_controller.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="youtube_top.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="youtube_chop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="shared_data.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="touch_helpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
